Drop relocation